--- a/layouts/charters/single.html
+++ b/layouts/charters/single.html
@@ -6,7 +6,7 @@
 {{ $button := (dict "text" .Params.Button "link" .Params.ButtonLink)}}
 {{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "backgroundPosition"
 .Params.heroBackgroundPosition "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "section" .Section
-"parent" .Parent "button" $button "content" .)}}
+"parent" .Parent "button" $button "fareharborId" .Params.fareharborId "content" .)}}
 <div class="container pt-4 pt-md-10 pb-4 pb-md-10">
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
